--- a/package.json
+++ b/package.json
@@ -3,26 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db": "json-server --watch db.json --port 3001",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export"
   },
   "dependencies": {
-    "@xstate/react": "^0.8.1",
+    "@reduxjs/toolkit": "^1.3.6",
+    "axios": "^0.19.2",
     "next": "9.1.6",
+    "next-redux-saga": "^4.1.2",
+    "next-redux-wrapper": "^6.0.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "styled-components": "^5.1.0",
-    "xstate": "^4.10.0"
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-act": "^1.8.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "@zeit/next-sass": "^1.0.1",
     "babel-plugin-module-resolver": "^4.0.0",
+    "json-server": "^0.16.1",
     "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "tslint": "^6.1.2",
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
